# cytocontainer-rest-server

./: .gitignore  Makefile  README.md  Vagrantfile  bootstrap.sh  pom.xml
docker/: Dockerfile
example_apps/: README.rst
example_apps/cx2_layout_demo/: README.rst  pyproject.toml
example_apps/cx2_layout_demo/cx2layoutdemo/: __init__.py
example_apps/cx2_layout_demo/docker/: Dockerfile
example_apps/python/addnetworks_demo/: README.rst  pyproject.toml  python_addnetworksdemo.json
example_apps/python/addnetworks_demo/addnetworks/: __init__.py  addnewnetworks.py  cli.py
example_apps/python/addnetworks_demo/docker/: Dockerfile  Makefile
example_apps/python/cx2_layout_demo/cx2layoutdemo/: cli.py  layout.py
example_apps/python/updatelayouts_demo/: README.rst  cx2layoutdemo.json  pyproject.toml  python_updatelayoutsdemo.json  requirements.txt
example_apps/python/updatelayouts_demo/docker/: Dockerfile  Makefile
example_apps/python/updatelayouts_demo/updatelayouts/: __init__.py  cli.py
example_apps/python/updatenetwork_demo/: README.rst  foo.cx2  pyproject.toml  python_updatenetworkdemo.json  requirements.txt
example_apps/python/updatenetwork_demo/docker/: Dockerfile  Makefile
example_apps/python/updatenetwork_demo/updatenetwork/: __init__.py  cli.py  update.py
example_apps/python/updateselection_demo/: README.rst  foo.edgelist  pyproject.toml  python_updateselectiondemo.json  requirements.txt
example_apps/python/updateselection_demo/docker/: Dockerfile  Makefile
example_apps/python/updateselection_demo/updateselection/: __init__.py  cli.py  update.py
src/main/java/org/cytoscape/cytocontainer/rest/: App.java  CorsFilter.java  CytoContainerApplication.java  OpenApiApplication.java  RequestLoggingFilter.java  SwaggerFilter.java
src/main/java/org/cytoscape/cytocontainer/rest/engine/: CmdlineCytoContainerAlgorithmsFactory.java  CytoContainerAlgorithmsFactory.java  CytoContainerEngine.java  CytoContainerEngineFactory.java  CytoContainerEngineImpl.java
src/main/java/org/cytoscape/cytocontainer/rest/services/: Configuration.java  CustomOpenApiResource.java  CytoContainer.java  CytoContainerHttpServletDispatcher.java  OpenApiHttpServletDispatcher.java  Status.java
src/main/java/org/cytoscape/cytocontainer/rest/swagger/: SwaggerFilter.java  SwaggerScanner.java
src/main/resources/webapp/: index.html
src/test/java/org/cytoscape/cytocontainer/rest/: TestApp.java  TestCorsFilter.java  TestSwaggerFilter.java
systemdservice/: communitydetection.conf  communitydetectionalgorithms.json  cytocontainer.service  diffusionalgorithm.json  layoutalgorithms.json  readme.txt  server.conf
systemdservice/algorithms/: addnetworksexample.json  openurlexample.json
(+16 files in other folders)
