[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "updateselection_demo"
version = "0.1.0"
description = "Example Cytoscape Container service app that updates the selected nodes in current CX2 network"
authors = [
    { name = "Cytoscape / Ideker Lab" }
]
readme = "README.rst"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "ndex2>=3.6.0"
]

[project.scripts]
cytoscape-updateselection-demo = "updateselection.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["updateselection*"]
